<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:backgroundTint="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#FFFFFF"
    >

    <LinearLayout
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:gravity="center"
        >
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/ballet_image"
            android:src="@drawable/vote"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_title" />

        <TextView
            android:id="@+id/welcome_candidate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Welcome_candidate"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/Landing_buttons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />
        <TextView
            android:id="@+id/ECM_TEXT_SLOGAN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slogan"
            android:textColor="@color/black"

            android:textSize="20sp"
            />




    </LinearLayout>


    <LinearLayout
        android:id="@+id/Landing_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="20sp"
        android:paddingVertical="10dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_title">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/candidateLogin"
            style="@style/SolidButton"
            android:text="@string/login" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/candidateSignUp"
            style="@style/BorderButton"
            android:text="@string/signup" />



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>