<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:backgroundTint="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/candidate_signup_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:gravity="center"
        >
        <LinearLayout
            android:id="@+id/header_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/ECM_TEXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="45sp"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:text="@string/ECM" />

            <TextView
                android:id="@+id/ECM_FULLFORM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/ECM_fullform" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/header_title2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/candidate_h2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="30dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/welcome_back" />

            <TextView
                android:id="@+id/candidate_create_account_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:text="Login with the data you entered \n during your registration" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/candidate_login_input_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp"
            android:gravity="center"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                style="@style/gray_border_input_fields"
                android:hint="Email"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                style="@style/gray_border_input_fields"
                android:hint="Password"
                />
        </LinearLayout>
    <LinearLayout
        android:id="@+id/header_title5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="end"
        android:paddingRight="10dp"
        >
        <TextView
            android:id="@+id/forget_candidate_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary"
            android:textStyle="normal"
            android:textSize="20sp"
            android:text="@string/forgot_password" />
    </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginTop="100dp"
            android:id="@+id/start"
            style="@style/SolidButton"
            android:text="Login" />

        <LinearLayout
            android:id="@+id/header_title4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/already_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="@string/don_t_have_an_account" />

            <TextView
                android:id="@+id/candidate_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary"
                android:textStyle="normal"
                android:textSize="20sp"
                android:text="@string/signup" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>