<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:backgroundTint="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#FFFFFF"
    >

    <LinearLayout
        android:id="@+id/candidate_signup_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:gravity="center"
        >
        <LinearLayout
            android:id="@+id/header_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/ECM_TEXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="45sp"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:text="@string/ECM" />

            <TextView
                android:id="@+id/ECM_FULLFORM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/ECM_fullform" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/header_title2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/candidate_h2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="create Your Voter Account" />

            <TextView
                android:id="@+id/candidate_create_account_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:text="@string/createAccountText" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/candidate_sign_input_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:gravity="center"
            >
            <LinearLayout
                android:id="@+id/candidate_sign_input_fields1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center"
                >
                <EditText
                    android:id="@+id/first_name"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    style="@style/gray_border_input_fields"
                    android:hint="First Name"
                    />
                <EditText
                    android:id="@+id/last_name"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    style="@style/gray_border_input_fields"
                    android:hint="Last Name"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/candidate_sign_input_fields2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center"
                >
                <EditText
                    android:id="@+id/email"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    style="@style/gray_border_input_fields"
                    android:hint="Email"
                    />
                <EditText
                    android:id="@+id/registration_no"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    style="@style/gray_border_input_fields"
                    android:hint="Registration No."
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/candidate_sign_input_fields3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center"
                >
                <EditText
                    android:id="@+id/password"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:inputType="textPassword"
                    android:layout_weight="1"
                    style="@style/gray_border_input_fields"
                    android:hint="Password"
                    />
                <EditText
                    android:id="@+id/confirm_password"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    style="@style/gray_border_input_fields"
                    android:hint="Confirm Password"
                    />
            </LinearLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/candidateSignUp"
            style="@style/BorderButton"
            android:layout_marginTop="45dp"
            android:text="@string/signup" />
        <LinearLayout
            android:id="@+id/header_title4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/already_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/already_have_an_account" />

            <TextView

                android:id="@+id/candidate_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary"
                android:textStyle="normal"
                android:textSize="20sp"
                android:text="@string/login" />
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>