<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:backgroundTint="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#FFFFFF">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/candidate_signup_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/header_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/ECM_TEXT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="45sp"
                    android:textStyle="bold"
                    android:textColor="@color/primary"
                    android:text="@string/ECM" />

                <TextView
                    android:id="@+id/ECM_FULLFORM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/ECM_fullform" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/header_title2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/candidate_h2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="Create Your Admin Account" />

                <TextView
                    android:id="@+id/candidate_create_account_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:text="@string/createAccountText" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/candidate_sign_input_fields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:gravity="center">

                <LinearLayout
                    android:id="@+id/profile_image_section"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_marginBottom="20dp">

                    <ImageView
                        android:id="@+id/profile_image"
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:layout_marginTop="8dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/profile"
                        android:background="@drawable/circle_shape" />

                    <TextView
                        android:id="@+id/upload_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="Upload Image"
                        android:textColor="@color/primary"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:clickable="true"
                        android:focusable="true" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/candidate_sign_input_fields1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/first_name"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        style="@style/gray_border_input_fields"
                        android:hint="First Name" />

                    <EditText
                        android:id="@+id/last_name"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        style="@style/gray_border_input_fields"
                        android:hint="Last Name" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/candidate_sign_input_fields2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        style="@style/gray_border_input_fields"
                        android:hint="Email" />

                    <EditText
                        android:id="@+id/registration_no"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        style="@style/gray_border_input_fields"
                        android:hint="Registration No." />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/candidate_sign_input_fields3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:inputType="textPassword"
                        android:layout_weight="1"
                        style="@style/gray_border_input_fields"
                        android:hint="Password" />

                    <EditText
                        android:id="@+id/confirm_password"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        style="@style/gray_border_input_fields"
                        android:hint="Confirm Password" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/candidate_sign_input_fields7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:gravity="center">

                    <!-- Department Dropdown -->
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="Department"
                        android:backgroundTint="#ffff">

                        <AutoCompleteTextView
                            android:id="@+id/department"
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:inputType="none"
                            style="@style/gray_border_input_fields"
                            app:simpleItems="@array/departments" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Course Dropdown -->
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="Course"
                        android:backgroundTint="#ffff">

                        <AutoCompleteTextView
                            android:id="@+id/course"
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:inputType="none"
                            style="@style/gray_border_input_fields"
                            app:simpleItems="@array/courses" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <!-- Spinners for section and semester without android:prompt -->
                <LinearLayout
                    android:id="@+id/candidate_sign_input_fields6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:gravity="center">

                    <!-- Section Dropdown -->
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="Section"
                        android:backgroundTint="#ffff">

                        <AutoCompleteTextView
                            android:id="@+id/section"
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:inputType="none"
                            style="@style/gray_border_input_fields"
                            app:simpleItems="@array/sections" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Semester Dropdown -->
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="Semester"
                        android:backgroundTint="#ffff">

                        <AutoCompleteTextView
                            android:id="@+id/semester"
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:inputType="none"
                            style="@style/gray_border_input_fields"
                            app:simpleItems="@array/semesters" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>



            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/candidateSignUp"
                style="@style/BorderButton"
                android:layout_marginTop="45dp"
                android:text="@string/signup" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="center"
                style="?android:attr/progressBarStyleLarge" />

            <LinearLayout
                android:id="@+id/header_title4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/already_have_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/already_have_an_account" />

                <TextView
                    android:id="@+id/candidate_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary"
                    android:textStyle="normal"
                    android:textSize="20sp"
                    android:text="@string/login" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
